jumbotron spacing fix

--- a/client/src/Components/ButtonDisplay/style.css
+++ b/client/src/Components/ButtonDisplay/style.css
@@ -18,5 +18,9 @@
         background: rgba(255, 255, 255, 0.454);
         /* color: #ffffff !important; */
     }
+
+    #buttonDisplayBtn:hover {
+        border: none !important;
+    }
 }
 
