--- a/client/src/pages/style.css
+++ b/client/src/pages/style.css
@@ -49,7 +49,8 @@ html {
     background-repeat: no-repeat !important;
     background-size: cover !important;
     height: 500px;
-    margin-bottom: 0 !important;
+    width: 100%;
+    margin-top: 0 !important;
 }
 
 .deviceButtons {
